--- a/FE/src/components/Detail/Detail.module.css
+++ b/FE/src/components/Detail/Detail.module.css
@@ -279,6 +279,36 @@
     color             : #333;
     border-radius     : 8px;
 }
+.proQuantity {
+    width: 110px;
+    height: 32px;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    border: 1px solid #d8d8d8;
+    overflow: hidden;
+    border-radius: 5px;
+    margin-right: 20px;
+}
+.proQuantity a{
+    border: 1px solid #d8d8d8;
+    font-size: 15px;
+    font-weight: 700;
+    padding: 4px 13px;
+    
+}
+.quantityChange {
+    width: calc(100% - 64px);
+    border: 0;
+    padding: 0;
+    margin: 0;
+    font-weight: 700;
+    font-size: 14px;
+    padding: 0 5px;
+    height: 32px;
+    line-height: inherit;
+    text-align: center;
+}
 .btnAddCart {
     align-items: center;
     display: flex;
