--- a/FE/src/components/Header/Header.module.css
+++ b/FE/src/components/Header/Header.module.css
@@ -1,7 +1,7 @@
 /* Test.module.css */
 a {
   text-decoration: none !important;
-  color: black !important;
+  /* color: black !important; */
 }
 .header {
     width: 100%;
